- New: Shopping pages now also has checkbox options for fields and picture (#663, #671, #710)
- New: Shopping mode options are now reachable through shopping mode menu and removed from settings
- Improved: Database exceptions are now caught and displayed (#698)
- Improved: Pictures in recipe or product descriptions now can be up to 10MB large (#698)
- Improved: Other design for recipe page
- Improved: Keyboard is displayed more reliably and quickly
- Improved: Form focus on master object pages & fixed plural field for English on QU page
- Improved: "Create recipe" page and "Create product" page now use "save and not close" buttons
- Improved: Description editor page now has bottom padding (still needs improvements with keyboard)
- Improved: Language picker works more reliably with demo domain change
- Improved: Shopping mode grouping option now can be set separately from shopping list page
- Improved: New grid layout on recipe page is default now
- Improved: Misleading error when trying to save duplicated barcode on product barcode edit (#724)
- Improved: Message shown when product or recipe is not on server (#718)
- Improved: Pictures optimized & added pictures to product bottom sheet and recipe page (#536)
- Fixed: Long click on barcode button on overview page was broken on Android Nougat and lower
- Fixed: Crash on startup with Android Lollipop (and maybe higher)
- Fixed: Prevent crash when opening qu conversion page (#708)
- Fixed: Glitch with large top margin on recipe grid layout (#696)
- Fixed: Saving QU conversion failed if conversion existed already in other product (#707, #682)
- Fixed: Disabled features with Home Assistant add-on were not disabled in app (#713)
- Fixed: On product creation with prefilled name there was a plus instead of space character
- Fixed: On product details sheet, description card was rendered with wrong height sometimes (#717)

## 3.2.1

- Fixed: Random crash with no reason (#699)